--- a/06 creating_using_library_array/index.html
+++ b/06 creating_using_library_array/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>USING BUILT-IN CLASSES</title>
+    <title>Array Manipulation</title>
 </head>
-
 <body>
-    
+    <input type="text" id="arrayInput" placeholder="Enter array element">
+    <button onclick="addToArray()">Add to Array</button>
+    <button onclick="removeFromArray()">Remove from Array</button>
+    <button onclick="displayArrayLength()">Display Array Length</button>
+    <button onclick="clearArray()">Clear Array</button>
+    <p id="arrayResult">Array: []</p>
+    <p id="lengthResult">Array Length: 0</p>
 
     <script src="script.js"></script>
 </body>
