--- a/07 data_dataformats/index.html
+++ b/07 data_dataformats/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>USING BUILT-IN CLASSES</title>
+    <title>Date Format</title>
 </head>
-
 <body>
+    <h1 style="text-align: center;">DATE FORMAT IN JS</h1>
+    
     
 
     <script src="script.js"></script>
