--- a/08 built_in_classes/index.html
+++ b/08 built_in_classes/index.html
@@ -3,11 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>USING BUILT-IN CLASSES</title>
+    <title>JavaScript Built-in Methods</title>
 </head>
-
 <body>
-    
+    <h1>JavaScript Built-in Methods Examples</h1>
+
+    <h2>Alert Example</h2>
+    <button onclick="showAlert()">Show Alert</button>
+
+    <h2>parseInt Example</h2>
+    <input type="text" id="intInput" placeholder="Enter a number">
+    <button onclick="parseIntExample()">Parse Int</button>
+    <p id="intResult"></p>
+
+    <h2>parseFloat Example</h2>
+    <input type="text" id="floatInput" placeholder="Enter a number">
+    <button onclick="parseFloatExample()">Parse Float</button>
+    <p id="floatResult"></p>
+
+    <h2>isNaN Example</h2>
+    <input type="text" id="nanInput" placeholder="Enter a value">
+    <button onclick="checkIsNaN()">Check isNaN</button>
+    <p id="nanResult"></p>
+
+    <h2>toUpperCase Example</h2>
+    <input type="text" id="textInput" placeholder="Enter text">
+    <button onclick="convertToUpperCase()">Convert to Upper Case</button>
+    <p id="textResult"></p>
 
     <script src="script.js"></script>
 </body>
