--- a/11 for_in_loop_for_of_loop/index.html
+++ b/11 for_in_loop_for_of_loop/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>USING BUILT-IN CLASSES</title>
+    <title>loops</title>
 </head>
 
 <body>
